--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,7 +86,8 @@
                 android:id="@+id/left_recycler_view"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginEnd="4dp"
+                android:layout_marginEnd="8dp"
+                android:padding="8dp"
                 android:background="@drawable/recycler_background"
                 app:layout_constraintTop_toBottomOf="@id/left_section_label"
                 app:layout_constraintStart_toStartOf="parent"
@@ -98,7 +99,8 @@
                 android:id="@+id/right_recycler_view"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="4dp"
+                android:layout_marginStart="8dp"
+                android:padding="8dp"
                 android:background="@drawable/recycler_background"
                 app:layout_constraintTop_toBottomOf="@id/right_section_label"
                 app:layout_constraintStart_toEndOf="@id/connector_line"
