--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,14 +98,16 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/right_recycler_view"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:padding="8dp"
                 android:background="@drawable/recycler_background"
-                app:layout_constraintTop_toBottomOf="@id/right_section_label"
-                app:layout_constraintStart_toEndOf="@id/connector_line"
+                android:padding="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@id/connector_line"
+                app:layout_constraintTop_toBottomOf="@id/right_section_label"
+                app:layout_constraintVertical_bias="0.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
